--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,94 +1,77 @@
+<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+  <a class="navbar-brand" href="#">{{title}}</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault"
+    aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button> 
+  <div class="collapse navbar-collapse" id="navbarsExampleDefault">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item active">
+        <a class="nav-link" href="/">LogIn
+          <span class="sr-only">(current)</span>
+        </a>
+      </li>
+    </ul>
+  </div>
+</nav>
 
-     <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-      <a class="navbar-brand" href="#">{{navbar}}</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-
-      <div class="collapse navbar-collapse" id="navbarsExampleDefault">
-        <ul class="navbar-nav mr-auto">
-          <li class="nav-item active">
-            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Link</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link disabled" href="#">Disabled</a>
-          </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="http://example.com" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Dropdown</a>
-            <div class="dropdown-menu" aria-labelledby="dropdown01">
-              <a class="dropdown-item" *ngFor="let com of myData.Companies" href="/{{ com.ID }}" >{{ com.CompanyName }}</a>
-            </div>
+<main role="main">  
+  <div class="jumbotron">
+    <div class="container">
+      <h1 class="display-3">{{welcome.header + title}}</h1>
+      <p>{{welcome.body}}  <b>{{welcome.name}} </b></p>
+    </div>
+  </div> 
+  <div class="container">
+    <div class="row">
+      <div class="col-md-3">
+        <h2>Companies</h2>
+        <ul>
+          <li *ngFor="let Company of myData.Companies">{{ Company.CompanyName }}</li>
+        </ul>
+      </div>
+      <div class="col-md-3">
+        <h2>Users</h2>
+        <ul>
+          <li *ngFor="let User of myData.Users">{{ User.Name }} {{ User.Surname }}
+            <i>
+              <u>{{ User.username }}</u>
+            </i>
           </li>
         </ul>
-        <form class="form-inline my-2 my-lg-0">
-          <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
-          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-        </form>
       </div>
-    </nav>
-
-    <main role="main">
-
-      <!-- Main jumbotron for a primary marketing message or call to action -->
-      <div class="jumbotron">
-        <div class="container">
-          <h1 class="display-3">Hello, world!</h1>
-          <p>This is a template for a simple marketing or informational website. It includes a large callout called a jumbotron and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
-          <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more &raquo;</a></p>
-        </div>
+      <div class="col-md-3">
+        <h2>Products</h2>
+        <ul>
+          <li *ngFor="let Product of myData.Products">{{ Product.ProductName }}
+            <br>{{ Product.ProductDescription }}
+            <i>
+              <u>{{ Product.ProductPrice }} &euro;</u>
+            </i>
+            <br>
+            <span style="text-align: left;"> -nga
+              <b>{{ Product.Company.CompanyName }}</b>
+            </span>
+          </li>
+        </ul>
       </div>
+      <div class="col-md-3">
+        <h2>Posts</h2>
+        <ul>
+          <li *ngFor="let Post of myData.Posts">{{ Post.PostTitle }}
+            <br>{{ Post.PostBody }}
+            <br>
+            <i>
+              <u>{{ Post.PostDate }}</u>
+            </i>
+          </li>
+        </ul> 
+      </div> 
+    </div> 
+    <hr> 
+  </div> 
+</main> 
 
-      <div class="container">
-        <!-- Example row of columns -->
-        <div class="row">
-          <div class="col-md-4">
-            <h2>Companies</h2>
-            <ul>
-              <li *ngFor="let Company of myData.Companies">{{ Company.CompanyName }}</li>
-            </ul>
-          </div>
-          <div class="col-md-4">
-            <h2>Users</h2>
-            <ul>
-              <li *ngFor="let User of myData.Users">{{ User.Name }} {{ User.Surname }} <i><u>{{ User.username }}</u></i></li>
-            </ul>
-          </div>
-          <div class="col-md-4">
-            <h2>Products</h2>
-            <ul>
-              <li *ngFor="let Product of myData.Products">{{ Product.ProductName }}<br>{{ Product.ProductDescription }} <i><u>{{ Product.ProductPrice }} &euro;</u></i><br><span style="text-align: left;"> -nga <b>{{ Product.Company.CompanyName }}</b></span></li>
-            </ul>
-          </div>
-          <div class="col-md-4">
-            <h2>Posts</h2>
-            <ul>
-              <li *ngFor="let Post of myData.Posts">{{ Post.PostTitle }}<br>{{ Post.PostBody }}<br><i><u>{{ Post.PostDate }}</u></i></li>
-            </ul>
-            <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
-          </div>
-          <div class="col-md-4">
-            <h2>Products</h2>
-            <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-            <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
-          </div>
-          <div class="col-md-4">
-            <h2>Products</h2>
-            <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-            <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
-          </div>
-        </div>
-
-        <hr>
-
-      </div> <!-- /container -->
-
-    </main>
-
-    <footer class="container">
-      <p>&copy; Company 2017</p>
-    </footer>
-
-    
+  <footer class="container">
+    <p>&copy; {{welcome.name}}</p>
+  </footer>
